sophons/apps/ntfy/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  strategy:
    type: Recreate
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      priorityClassName: system-cluster-critical
      tolerations:
        - key: "orunmila.sophons.cloud/ase-orun"
          operator: Exists

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              preference:
                matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: NotIn
                    # avoid running inside me house if possible
                    values: [ng-east-1, ng-east-2, ng-middle-east]

      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: ntfy
          image: binwiederhier/ntfy
          args: ["serve", "--config=/etc/ntfy/server.yaml"]

          ports:
            - containerPort: 80
              name: http

          volumeMounts:
            - name: config
              mountPath: "/etc/ntfy"
              readOnly: true
            - name: ntfy
              mountPath: "/var/lib/ntfy"

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

      volumes:
        - name: ntfy
          emptyDir:
            sizeLimit: 512Mi
        - name: config
          secret:
            secretName: ntfy-config
        - name: litestream
          configMap:
            name: litestream
