sophons/apps/ntfy/statefulset.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.36.1/statefulset-apps-v1.json
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      priorityClassName: system-cluster-critical
      tolerations:
        - key: "orunmila.sophons.cloud/ase-orun"
          operator: Exists

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: NotIn
                    # avoid running inside me house if possible
                    values: [ng]

      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.28
          args: ["serve", "--config=/etc/ntfy/server.yaml"]

          ports:
            - containerPort: 80
              name: http

          volumeMounts:
            - name: ntfy-config
              mountPath: "/etc/ntfy"
              readOnly: true
            - name: tmp
              subPath: ntfy
              mountPath: "/var/lib/ntfy"

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

      volumes:
        - name: tmp
          emptyDir: {}
        - name: ntfy-config
          secret:
            secretName: ntfy-config
        - name: litestream-config
          configMap:
            name: litestream-config
