sophons/apps/ntfy/service.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/service.json
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
