sophons/apps/ntfy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Push notifications
    gethomepage.dev/group: Alerting & Notifications
    gethomepage.dev/icon: ntfy.svg
    gethomepage.dev/name: Ntfy
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - ntfy.sophons.cloud

  rules:
    - backendRefs:
        - name: ntfy
          port: 80
